--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
   },
   "homepage": "https://github.com/jasonduro/myFlix-client#readme",
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "dom": "^0.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
-    "react-router": "^6.8.2",
-    "react-router-dom": "^6.8.2"
+    "react-router": "^5.3.4",
+    "react-router-dom": "^5.3.4"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
